Update legal information in footer

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
         <div class="legal-info">
             <p><strong>Cronatech Sistemas</strong> (Nome Fantasia)</p>
-            <p>Razão Social: [SEU NOME COMPLETO] [SEU CPF]</p>
-            <p>CNPJ: [SEU CNPJ XX.XXX.XXX/0001-XX]</p>
-            <p>Endereço: [SEU ENDEREÇO COMPLETO, RUA, NUMERO, BAIRRO, CIDADE - UF, CEP]</p>
+            <p>Razão Social: RICHELLE RODRIGUES SOARES 30356937810</p>
+            <p>CNPJ: 47.790.151/0001-54 </p>
+            <p>Endereço: Rua Dias Mendes, 30 - São Paulo - SP - Brasil</p>
         </div>
     </footer>
 
