--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 
     <header>
-        <img src="logo.jpg" alt="Cronatech Sistemas" class="logo-img">
+        <img src="logo.png" alt="Cronatech Sistemas" class="logo-img">
     </header>
 
     <section class="hero">
