Troca de imagem Drivio

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                 <div class="lg:w-1/2 w-full relative">
                     <div class="rounded-2xl overflow-hidden shadow-neon border-2 border-primary/30 relative group cursor-pointer bg-slate-900">
-                        <img src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?q=80&w=1000&auto=format&fit=crop" alt="Interface do Drivio" class="w-full h-auto object-cover opacity-80 group-hover:opacity-100 transition-opacity">
+                        <img src="capa_video.png" alt="Capa do Vídeo Drivio" class="w-full h-auto object-cover opacity-80 group-hover:opacity-100 transition-opacity">
                         
                         <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-primary/80 hover:bg-primary text-white rounded-full p-5 pl-6 shadow-lg shadow-primary/50 transition-all group-hover:scale-110">
                              <span class="material-icons-round text-5xl">play_arrow</span>
